k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: m3u-proxy
  labels:
    name: m3u-proxy
